Mac a11y: Add RoleDescription, Value, Subrole accessibility attributes & tests.

Populate NSAccessibilityRoleDescriptionAttribute,
NSAccessibilityValueAttribute, and NSAccessibilitySubroleAttribute fields for
views::View elements on Mac, with tests.

Also add unit tests for the attributes currently supported, including a test
specifically for textfields.

BUG=610591

Review-Url: https://codereview.chromium.org/2016243002
Cr-Commit-Position: refs/heads/master@{#400859}

Former-commit-id: 244fc7d3829a5f62b28c5655badb2df290676e2d